--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buckshot Roulette Calculator</title>
+    <title>Buckshot Roulette Helper</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -181,7 +181,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Buckshot Roulette Calculator</h1>
+        <h1>Buckshot Roulette Helper</h1>
         
         <div id="setupSection" class="setup-section">
             <h2>Setup Game</h2>
